--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,8 @@ img {
 
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 p {
@@ -49,16 +51,34 @@ p {
 }
 
 .container {
-  width: 1200px;
+  width: 480px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 786px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .currents::after {
@@ -385,16 +405,6 @@ p {
   margin-right: 50px;
 }
 
-.bloks {
-  height: 120px;
-  display: flex;
-  background: var(--primary-bacground-color);
-  border-radius: 4px;
-  margin-bottom: 30px;
-  align-items: center;
-  justify-content: center;
-}
-
 .main-title {
   background: #c4c4c4;
   color: var(--secondary-text-color);
@@ -411,10 +421,17 @@ p {
 .title {
   margin-bottom: 30px;
   margin-top: 0px;
-  font-size: 44px;
-  line-height: 60px;
+  font-size: 26px;
+  line-height: 42px;
   font-weight: 900;
   letter-spacing: 0.06em;
+}
+
+@media screen and (min-width: 1200px) {
+  .title {
+    font-size: 44px;
+    line-height: 60px;
+  }
 }
 
 .button {
@@ -441,15 +458,40 @@ p {
   cursor: pointer;
 }
 
-.about {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  display: flex;
-  padding-left: 0px;
+@media screen and (min-width: 768px) {
+  .about {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
-.list + .list {
-  margin-left: 30px;
+.bloks {
+  height: 120px;
+  display: flex;
+  background: var(--primary-bacground-color);
+  border-radius: 4px;
+  margin-bottom: 30px;
+  align-items: center;
+  justify-content: center;
+}
+
+.list-about {
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .list-about {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .list-about {
+    flex-basis: calc(100% / 4 - 30px);
+    margin-bottom: 0px;
+  }
 }
 
 .plist {
@@ -457,17 +499,50 @@ p {
   line-height: 24px;
   margin-top: 0px;
   margin-bottom: 0px;
-  width: 270px;
   color: var(--primary-text-color);
 }
 
+@media screen and (min-width: 768px) {
+  .plist {
+    max-width: 354px;
+  }
+}
+
 .headlines {
+  text-align: center;
   font-size: 14px;
   line-height: 16px;
   color: var(--primary-heading-color);
   font-weight: 700;
   margin-top: 0px;
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .headlines {
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .section-whatwedo {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px 1px 1px 1px);
+    padding: 0 !important;
+    border: 0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+  }
+}
+
+.images {
+  margin-top: 0px;
+  display: flex;
+  justify-content: center;
+  padding: 0px;
+  margin-bottom: 0px;
 }
 
 .main-headlines {
@@ -478,18 +553,6 @@ p {
   margin-bottom: 50px;
   text-align: center;
   margin-top: 0;
-}
-
-.section-whatwedo {
-  padding-top: 0;
-}
-
-.images {
-  margin-top: 0px;
-  display: flex;
-  justify-content: center;
-  padding: 0px;
-  margin-bottom: 0px;
 }
 
 .img-list {
@@ -528,39 +591,66 @@ p {
   justify-content: center;
 }
 
+.main-headlines-bot {
+  font-size: 28px;
+  line-height: 33px;
+  font-weight: 700;
+  color: var(--primary-heading-color);
+  margin-bottom: 50px;
+  text-align: center;
+  margin-top: 0px;
+}
+
+@media screen and (min-width: 1200px) {
+  .main-headlines-bot {
+    font-size: 36px;
+    line-height: 42px;
+  }
+}
+
 .all-employee {
   padding-bottom: 94px;
   margin-bottom: 0px;
   margin-top: 0px;
-  display: flex;
-  justify-content: center;
   padding: 0;
 }
 
-.employee + .employee {
-  margin-left: 30px;
+@media screen and (min-width: 768px) {
+  .all-employee {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
 .employee {
-  width: 270px;
   background: var(--secondary-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .employee {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .employee {
+    flex-basis: calc(100% / 4 - 30px);
+  }
+}
+
+.img-developer {
+  width: 100%;
 }
 
 .our-team {
   background-color: var(--primary-bacground-color);
   padding-top: 94px;
   margin-left: 0px;
-}
-
-.main-headlines-bot {
-  font-size: 36px;
-  line-height: 42px;
-  font-weight: 700;
-  color: var(--primary-heading-color);
-  margin-bottom: 50px;
-  text-align: center;
-  margin-top: 0px;
 }
 
 .workers {
