--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,26 +1,59 @@
-.about {
-  margin-top: 0px;
-  margin-bottom: 0px;
-  display: flex;
-  padding-left: 0px;
+@media screen and (min-width: 768px) {
+  .about {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
-.list + .list {
-  margin-left: 30px;
+
+.bloks {
+  height: 120px;
+  display: flex;
+  background: var(--primary-bacground-color);
+
+  border-radius: 4px;
+  margin-bottom: 30px;
+  align-items: center;
+  justify-content: center;
+}
+.list-about {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .list-about {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .list-about {
+    flex-basis: calc(100% / 4 - 30px);
+    margin-bottom: 0px;
+  }
 }
 .plist {
   font-size: 14px;
   line-height: 24px;
   margin-top: 0px;
   margin-bottom: 0px;
-  width: 270px;
   color: var(--primary-text-color);
 }
+@media screen and (min-width: 768px) {
+  .plist {
+    max-width: 354px;
+  }
+}
 .headlines {
+  text-align: center;
   font-size: 14px;
   line-height: 16px;
   color: var(--primary-heading-color);
   font-weight: 700;
   margin-top: 0px;
-
   margin-bottom: 10px;
+}
+@media screen and (min-width: 768px) {
+  .headlines {
+    text-align: left;
+  }
 }
