--- a/css/main.css
+++ b/css/main.css
@@ -51,10 +51,16 @@ p {
 }
 
 .container {
-  width: 480px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -628,6 +634,7 @@ p {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   margin-bottom: 30px;
+  width: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -645,6 +652,8 @@ p {
 
 .img-developer {
   width: 100%;
+  display: block;
+  height: auto;
 }
 
 .our-team {
