--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -37,6 +37,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   margin-bottom: 30px;
+  width: 100%;
 }
 @media screen and (min-width: 768px) {
   .employee {
@@ -52,6 +53,8 @@
 
 .img-developer {
   width: 100%;
+  display: block;
+  height: auto;
 }
 .our-team {
   background-color: var(--primary-bacground-color);
