--- a/css/main.css
+++ b/css/main.css
@@ -214,13 +214,20 @@ p {
 .logodown {
   font-family: Raleway;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 31px;
+  font-size: 24px;
+  line-height: 28px;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   text-decoration: none;
   display: inline-block;
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .logodown {
+    font-size: 26px;
+    line-height: 31px;
+  }
 }
 
 .footer {
@@ -229,9 +236,43 @@ p {
   padding-top: 60px;
 }
 
-.footer__flex {
-  display: flex;
-  align-items: baseline;
+@media screen and (min-width: 768px) {
+  .footer__flex {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__flex {
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__flex {
+    align-items: baseline;
+  }
+}
+
+.footer-nav {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-nav {
+    width: 50%;
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-nav {
+    text-align: left;
+    margin: 0;
+  }
 }
 
 .footer__address {
@@ -250,13 +291,46 @@ p {
   color: var(--accent-color);
 }
 
-.footer__list {
-  margin-top: 9px;
+.footer-list {
+  padding-left: 0px;
+  margin: 0px;
+  font-style: normal;
+}
+
+.footer__list:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .footer__social {
-  margin-left: 70px;
-  margin-right: 93px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer__social {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__social {
+    margin-left: 70px;
+    margin-right: 93px;
+    text-align: left;
+  }
+}
+
+.footer__ul-flex {
+  display: flex;
+  margin: 0%;
+  padding: 0%;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__ul-flex {
+    justify-content: left;
+  }
 }
 
 .footer__social-h {
@@ -269,22 +343,10 @@ p {
   color: var(--secondary-text-color);
 }
 
-.footer__ul-flex {
-  display: flex;
-  margin: 0%;
-  padding: 0%;
-}
-
-.footer-list {
-  padding-left: 0px;
-  margin: 0px;
-  font-style: normal;
-}
-
 .footer__linknav {
   font-size: 14px;
-  line-height: 16px;
-  font-weight: 500;
+  line-height: 24px;
+  font-weight: 400;
   text-decoration: none;
   list-style: none;
   color: rgba(255, 255, 255, 0.6);
@@ -295,6 +357,13 @@ p {
 
 .footer__linknav:focus, .footer__linknav:hover {
   color: var(--accent-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__linknav {
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
 
 .footer__social-list + .footer__social-list {
@@ -322,6 +391,12 @@ p {
   fill: var(--secondary-text-color);
 }
 
+@media screen and (min-width: 768px) {
+  .tablet {
+    display: flex;
+  }
+}
+
 .footer-button {
   display: flex;
   align-items: center;
@@ -336,6 +411,13 @@ p {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: 20px auto 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-button {
+    margin: 0;
+  }
 }
 
 .footer-form__b {
@@ -343,15 +425,36 @@ p {
   text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--secondary-text-color);
+  text-align: center;
+  margin-top: 60px;
 }
 
-.footer-form__span {
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .footer-form__b {
+    margin-top: 0;
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__span {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.footer-form__wrapper {
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-form__wrapper {
+    width: 60%;
+  }
 }
 
 .footer-form__imput {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -359,6 +462,18 @@ p {
   margin-right: 12px;
   color: var(--secondary-text-color);
   background: none;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-form__imput {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__imput {
+    width: 358px;
+  }
 }
 
 .menu__link-main {
@@ -720,8 +835,8 @@ p {
 .hclient {
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: 33px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-heading-color);
@@ -731,22 +846,42 @@ p {
   margin-bottom: 50px;
 }
 
-.client-list + .client-list {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .hclient {
+    font-size: 36px;
+    line-height: 42px;
+  }
 }
 
 .client-flex {
   display: flex;
-  margin: 0%;
-  padding: 0%;
-  justify-content: center;
+  flex-wrap: wrap;
+  margin-left: -30px;
+}
+
+.client-list {
+  flex-basis: calc(100% / 2 - 30px);
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .client-list {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client-list {
+    flex-basis: calc(100% / 6 - 30px);
+  }
 }
 
 .client-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   transition-duration: 250ms;
