--- a/sass/components/_footer-button.scss
+++ b/sass/components/_footer-button.scss
@@ -12,4 +12,10 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin: 20px auto 0;
+}
+@media screen and (min-width: 1200px) {
+  .footer-button {
+    margin: 0;
+  }
 }
