--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -3,13 +3,32 @@
   text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--secondary-text-color);
+  text-align: center;
+  margin-top: 60px;
 }
-.footer-form__span {
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .footer-form__b {
+    margin-top: 0;
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__span {
+    display: flex;
+    justify-content: center;
+  }
+}
+.footer-form__wrapper {
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  .footer-form__wrapper {
+    width: 60%;
+  }
 }
 .footer-form__imput {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -17,4 +36,15 @@
   margin-right: 12px;
   color: var(--secondary-text-color);
   background: none;
+}
+@media screen and (min-width: 768px) {
+  .footer-form__imput {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form__imput {
+    width: 358px;
+  }
 }
