--- a/sass/components/_logodown.scss
+++ b/sass/components/_logodown.scss
@@ -1,11 +1,17 @@
 .logodown {
   font-family: Raleway;
   font-weight: bold;
-  font-size: 26px;
-  line-height: 31px;
+  font-size: 24px;
+  line-height: 28px;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   text-decoration: none;
   display: inline-block;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .logodown {
+    font-size: 26px;
+    line-height: 31px;
+  }
 }
