--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,8 +1,8 @@
 .hclient {
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: 33px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-heading-color);
@@ -11,20 +11,38 @@
   margin-right: auto;
   margin-bottom: 50px;
 }
-.client-list + .client-list {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .hclient {
+    font-size: 36px;
+    line-height: 42px;
+  }
 }
+
 .client-flex {
   display: flex;
-  margin: 0%;
-  padding: 0%;
-  justify-content: center;
+  flex-wrap: wrap;
+  margin-left: -30px;
+}
+.client-list {
+  flex-basis: calc(100% / 2 - 30px);
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .client-list {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client-list {
+    flex-basis: calc(100% / 6 - 30px);
+  }
 }
 .client-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   transition-duration: 250ms;
