--- a/sass/layout/_image-list.scss
+++ b/sass/layout/_image-list.scss
@@ -1,17 +1,32 @@
 .card {
-  display: flex;
-  flex-wrap: wrap;
   margin-top: 0px;
   padding: 0%;
 }
-.card__list {
-  box-sizing: border-box;
-  min-width: 370px;
-  &:not(:nth-last-child(3n + 1)) {
-    margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .card {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
   }
-  &:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
+}
+// .card__list {
+//   box-sizing: border-box;
+//   min-width: 370px;
+//   &:not(:nth-last-child(3n + 1)) {
+//     margin-right: 30px;
+//   }
+//   &:not(:nth-last-child(-n + 3)) {
+//     margin-bottom: 30px;
+//   }
+// }
+.card__list {
+  width: 100%;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .card__list {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
   }
 }
 .card__link {
@@ -32,28 +47,45 @@
 .card__wrapper {
   position: relative;
   overflow: hidden;
+  height: 294px;
 }
+
 .card__overlay {
   position: absolute;
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  line-height: 28px;
   top: 0;
   left: 0;
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--secondary-text-color);
   transform: translatey(110%);
   transition: transform 250ms ease;
-  padding: 63px 24px;
+  padding: 77px 24px;
 }
+@media screen and (min-width: 1200px) {
+  .card_overlay {
+    width: 370px;
+    height: 294px;
+    padding: 63px 24px;
+  }
+}
+
 .card__describe {
   padding: 20px 24px;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
 }
+@media screen and (min-width: 767px) {
+  .cool {
+    height: 146px;
+  }
+}
 .card__sup-title {
   margin-bottom: 4px;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 36px;
   color: var(--primary-heading-color);
@@ -61,7 +93,13 @@
   margin-left: auto;
   margin-right: auto;
 }
-
+@media screen and (min-width: 768px) {
+  .card__sup-title {
+    width: 306px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
 .card__description {
   margin-bottom: 0;
   margin-top: 0px;
