--- a/css/main.css
+++ b/css/main.css
@@ -533,9 +533,25 @@ p {
   margin-left: auto;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-mob.jpg);
   background-size: cover;
   max-width: 1600px;
+}
+
+@media screen and (min-width: 768px) {
+  .main-title {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-tab.jpg);
+    background-size: cover;
+    max-width: 1600px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-title {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
+    background-size: cover;
+    max-width: 1600px;
+  }
 }
 
 .title {
@@ -985,6 +1001,13 @@ p {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .card__list {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+  }
+}
+
 .card__link {
   position: relative;
   display: block;
@@ -1043,6 +1066,12 @@ p {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .cool {
+    height: 110px;
+  }
+}
+
 .card__sup-title {
   margin-bottom: 4px;
   font-weight: 700;
@@ -1059,6 +1088,14 @@ p {
     width: 306px;
     margin-left: 0;
     margin-right: 0;
+    letter-spacing: 0.06em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .card__sup-title {
+    letter-spacing: 0.06em;
+    width: 100%;
   }
 }
 
