--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,9 +10,31 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/background.jpg);
+    url(../images/header-mob.jpg);
   background-size: cover;
   max-width: 1600px;
+}
+@media screen and (min-width: 768px) {
+  .main-title {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/header-tab.jpg);
+    background-size: cover;
+    max-width: 1600px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .main-title {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/background.jpg);
+    background-size: cover;
+    max-width: 1600px;
+  }
 }
 .title {
   margin-bottom: 30px;
