--- a/sass/layout/_image-list.scss
+++ b/sass/layout/_image-list.scss
@@ -29,6 +29,12 @@
     margin-left: 30px;
   }
 }
+@media screen and (min-width: 768px) {
+  .card__list {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+  }
+}
 .card__link {
   position: relative;
   display: block;
@@ -83,11 +89,17 @@
     height: 146px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .cool {
+    height: 110px;
+  }
+}
 .card__sup-title {
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 36px;
+
   color: var(--primary-heading-color);
   margin-top: 0;
   margin-left: auto;
@@ -98,6 +110,13 @@
     width: 306px;
     margin-left: 0;
     margin-right: 0;
+    letter-spacing: 0.06em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card__sup-title {
+    letter-spacing: 0.06em;
+    width: 100%;
   }
 }
 .card__description {
