--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,6 +2,7 @@
   color: var(--accent-color);
 }
 .logo {
+  margin: 16px auto 16px 0;
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
