--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -1,9 +1,14 @@
 .menu {
-  display: flex;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding-left: 0px;
-  justify-content: center;
-  margin-left: 93px;
-  align-items: center;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .menu {
+    display: flex;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 0px;
+    justify-content: center;
+    margin-left: 93px;
+    align-items: center;
+  }
 }
