--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@
 @import "./components/footer-form";
 
 //            LAYOUT
+@import "./layout/mobile-menu";
 @import "./layout/header";
 @import "./layout/header-portfolio";
 @import "./layout/hero";
