--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,7 @@ p {
 }
 
 .logo {
+  margin: 16px auto 16px 0;
   font-family: Raleway;
   font-weight: bold;
   font-size: 26px;
@@ -127,15 +128,20 @@ p {
 }
 
 .menu-contact {
-  display: flex;
-  align-items: center;
-  padding-left: 0;
-  margin: 0px;
-  margin-left: auto;
+  display: none;
 }
 
-.menu-contact.menu-contact__list + .menu-contact__list {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .menu-contact {
+    display: flex;
+    align-items: center;
+    padding-left: 0;
+    margin: 0px;
+    margin-left: auto;
+  }
+  .menu-contact.menu-contact__list + .menu-contact__list {
+    margin-left: 50px;
+  }
 }
 
 .menu-contact__link {
@@ -198,16 +204,30 @@ p {
 .flex {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 1200px) {
+  .flex {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .menu {
-  display: flex;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding-left: 0px;
-  justify-content: center;
-  margin-left: 93px;
-  align-items: center;
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .menu {
+    display: flex;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 0px;
+    justify-content: center;
+    margin-left: 93px;
+    align-items: center;
+  }
 }
 
 .logodown {
@@ -475,54 +495,183 @@ p {
   }
 }
 
-.menu__link-main {
+.mobile-menu__container {
   position: relative;
-  font-size: 14px;
-  line-height: 16px;
-  font-weight: 500;
-  color: var(--accent-color);
-  text-decoration: none;
-  list-style: none;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
 }
 
-.menu__list {
-  margin-left: 50px;
+.mob-menu {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+  transition: fill 250ms linear;
 }
 
-.menu__linkp {
-  display: block;
-  font-size: 14px;
-  line-height: 16px;
-  font-weight: 500;
-  color: var(--secondary-background-color);
-  text-decoration: none;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition-property: color;
-  transition-duration: 250ms;
+.mob-menu:hover, .mob-menu:focus {
+  fill: var(--accent-color);
+}
+
+.mobile-menu {
+  position: fixed;
+  overflow: auto;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: #ffffff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu__nav {
+  margin-bottom: 302px;
+}
+
+.close-butt {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  transition-property: fill, opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
 }
 
-.menu__linkp:hover, .menu__linkp:focus {
-  color: var(--accent-color);
+.close-butt:hover, .close-butt:focus {
+  fill: var(--accent-color);
 }
 
-.menu__linkp-main {
-  position: relative;
-  font-size: 14px;
-  line-height: 16px;
+.mobile-menu__list {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__link {
   font-weight: 500;
-  color: var(--accent-color);
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  color: var(--primary-heading-color);
   text-decoration: none;
-  list-style: none;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  margin-left: 50px;
-  margin-right: 50px;
+}
+
+.mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--accent-color);
+}
+
+.mobile-menu__numb {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  margin-bottom: 32px;
+}
+
+.mobile-menu__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  margin-bottom: 64px;
+}
+
+.mobile__menu-social {
+  display: flex;
+}
+
+.mobile-menu__soc-list:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-menu__soc-list:not(:first-child) {
+  padding-left: 10px;
+}
+
+.mobile-menu__soc-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .menu__link-main {
+    position: relative;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: var(--accent-color);
+    text-decoration: none;
+    list-style: none;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu__list {
+    margin-left: 50px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu__linkp {
+    display: block;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: var(--secondary-background-color);
+    text-decoration: none;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu__linkp:hover, .menu__linkp:focus {
+    color: var(--accent-color);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu__linkp-main {
+    position: relative;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: var(--accent-color);
+    text-decoration: none;
+    list-style: none;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
 }
 
 .main-title {
