--- a/sass/components/_flex.scss
+++ b/sass/components/_flex.scss
@@ -1,4 +1,11 @@
 .flex {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+@media screen and (min-width: 1200px) {
+  .flex {
+    display: flex;
+    align-items: center;
+  }
 }
