--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,15 +1,19 @@
-.menu__link-main {
-  position: relative;
-  font-size: 14px;
-  line-height: 16px;
-  font-weight: 500;
-  color: var(--accent-color);
-  text-decoration: none;
-  list-style: none;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
+@media screen and (min-width: 1200px) {
+  .menu__link-main {
+    position: relative;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: var(--accent-color);
+    text-decoration: none;
+    list-style: none;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
-.menu__list {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .menu__list {
+    margin-left: 50px;
+  }
 }
