--- a/sass/bace/_container.scss
+++ b/sass/bace/_container.scss
@@ -15,11 +15,13 @@
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 786px;
+    width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
