--- a/sass/layout/_image-list.scss
+++ b/sass/layout/_image-list.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
+    margin-bottom: -30px;
   }
 }
 // .card__list {
@@ -20,7 +21,7 @@
 //   }
 // }
 .card__list {
-  width: 100%;
+  width: 354px;
   margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
@@ -29,7 +30,7 @@
     margin-left: 30px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .card__list {
     flex-basis: calc(100% / 3 - 30px);
     margin-left: 30px;
