--- a/css/main.css
+++ b/css/main.css
@@ -1356,6 +1356,13 @@ p {
   background-color: var(--primary-bacground-color);
 }
 
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 96vw;
+    height: 96vh;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .modal {
     position: relative;
