--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -31,6 +31,12 @@
   border-radius: 4px;
   background-color: var(--primary-bacground-color);
 }
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 96vw;
+    height: 96vh;
+  }
+}
 @media screen and (min-width: 1200px) {
   .modal {
     position: relative;
