--- a/css/main.css
+++ b/css/main.css
@@ -1349,8 +1349,6 @@ p {
 
 .modal {
   position: relative;
-  width: 450px;
-  height: 609px;
   padding: 40px;
   border-radius: 4px;
   background-color: var(--primary-bacground-color);
@@ -1488,6 +1486,13 @@ p {
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .modal-form__btn {
+    margin-left: 85px;
+    margin-right: 85px;
+  }
 }
 
 .modal-checkbox-label::before {
