--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -27,7 +27,7 @@
   position: relative;
   padding: 40px;
   border-radius: 4px;
-  background-color: var(--primary-bacground-color);
+  background-color: #ffffff;
 }
 @media screen and (max-width: 767px) {
   .modal {
@@ -42,7 +42,6 @@
     height: 581px;
     padding: 40px;
     border-radius: 4px;
-    background-color: var(--primary-bacground-color);
   }
 }
 .close-button {
@@ -97,7 +96,7 @@
   margin-top: 4px;
 }
 .modal-form__input {
-  background-color: var(--primary-bacground-color);
+  background-color: #ffffff;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   width: 100%;
