--- a/sass/layout/_button-hero.scss
+++ b/sass/layout/_button-hero.scss
@@ -5,12 +5,14 @@
   font-size: 16px;
   line-height: 30px;
   font-weight: 700;
-  width: 200px;
-  height: 50px;
+  letter-spacing: 0.06em;
+  min-width: 200px;
+  padding: 10px 32px;
+  margin: 0 auto;
   left: 700px;
   top: 430px;
   cursor: pointer;
-  display: inline-block;
+  display: block;
   transition-property: background-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
