--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,7 +10,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/hero/hero-mobile.jpg);
+    url(../images/hero/header-mob.jpg);
   background-size: cover;
   max-width: 1600px;
 }
@@ -23,7 +23,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/hero/hero_mobile@2x.jpg);
+      url(../images/hero/hero_mobile.jpg);
     background-size: cover;
   }
 }
