--- a/sass/layout/_image-list.scss
+++ b/sass/layout/_image-list.scss
@@ -21,12 +21,12 @@
 //   }
 // }
 .card__list {
-  width: 354px;
   margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .card__list {
     flex-basis: calc(100% / 2 - 30px);
+    width: 354px;
     margin-left: 30px;
   }
 }
@@ -54,6 +54,11 @@
 .card__wrapper {
   position: relative;
   overflow: hidden;
+}
+.img-markt {
+  width: 100%;
+  display: block;
+  height: auto;
 }
 
 .card__overlay {
