--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,10 @@
   letter-spacing: 0.03em;
 }
 
+a {
+  text-decoration: none;
+}
+
 address {
   font-style: normal;
 }
@@ -641,22 +645,34 @@ p {
   color: var(--accent-color);
 }
 
+@media screen and (max-width: 767px) {
+  .main {
+    color: var(--accent-color);
+  }
+}
+
 .mobile-menu__numb {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__link-numb {
   font-weight: 500;
   font-size: 34px;
   line-height: 40px;
   letter-spacing: 0.02em;
   color: var(--accent-color);
-  margin-bottom: 32px;
 }
 
 .mobile-menu__mail {
+  margin-bottom: 64px;
+}
+
+.mobile-menu__link-mail {
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
-  margin-bottom: 64px;
 }
 
 .mobile__menu-social {
@@ -1373,6 +1389,7 @@ p {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
+  transition: opacity 250ms linear, visibility 250ms linear;
 }
 
 .modal {
