--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -22,6 +22,7 @@
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
+  transition: opacity 250ms linear, visibility 250ms linear;
 }
 .modal {
   position: relative;
