--- a/css/main.css
+++ b/css/main.css
@@ -558,9 +558,11 @@ p {
 
 .mobile-menu__container {
   position: relative;
-  padding-top: 48px;
-  padding-bottom: 48px;
-  padding-left: 40px;
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .mob-menu {
@@ -600,10 +602,6 @@ p {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-}
-
-.mobile-menu__nav {
-  margin-bottom: 302px;
 }
 
 .close-butt {
@@ -675,6 +673,12 @@ p {
   color: var(--primary-text-color);
 }
 
+@media screen and (max-width: 479px) {
+  .mobile-menu__link-mail {
+    font-size: 20px;
+  }
+}
+
 .mobile__menu-social {
   display: flex;
 }
@@ -695,6 +699,12 @@ p {
   line-height: 22px;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+}
+
+@media screen and (max-width: 450px) {
+  .mobile-menu__soc-link {
+    font-size: 11px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -769,7 +779,7 @@ p {
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), screen and (min-resolution: 192dpi) and (min-width: 320px), screen and (min-resolution: 2dppx) and (min-width: 320px) {
   .main-title {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_mobile.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_mobile@2x.jpg);
     background-size: cover;
   }
 }
@@ -1399,6 +1409,14 @@ p {
   background-color: #ffffff;
 }
 
+@media screen and (max-width: 400px) {
+  .modal {
+    padding: 40px auto 10px;
+    width: 95vw;
+    height: 90vh;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .modal {
     position: relative;
@@ -1436,12 +1454,19 @@ p {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   display: block;
   color: var(--primary-heading-color);
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 400px) {
+  .modal-title {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
 }
 
 .modal-form__text {
@@ -1508,6 +1533,12 @@ p {
   border-color: var(--accent-color);
 }
 
+@media screen and (max-width: 400px) {
+  .modal-form__comment {
+    height: 60px;
+  }
+}
+
 .modal-form__link {
   color: var(--accent-color);
 }
@@ -1545,6 +1576,12 @@ p {
   font-size: 14px;
   line-height: 1.71;
   margin-bottom: 31px;
+}
+
+@media screen and (max-width: 400px) {
+  .modal-checkbox-label {
+    font-size: 9px;
+  }
 }
 
 .modal-checkbox:checked + .modal-checkbox-label::before {
