--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -23,7 +23,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/hero/hero_mobile.jpg);
+      url(../images/hero/hero_mobile@2x.jpg);
     background-size: cover;
   }
 }
